# GAOS-TurnBasedGrid-SDK

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEVPOST.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  docs.yml  release.yml
.graph/claims/: codex%2Fadd-devpost-narrative-sections.json  codex%2Fadd-explicit-zonoid-showcase-cta.json  codex%2Fadd-gaos-mission-and-benchmark-rationale.json  codex%2Fadd-nearest-reachable-qualified-cell-path-search-to-grid-sdk.json  codex%2Faudit-gaos-and-zonoid-evidence-for-ai-workflow-case-study.json  codex%2Faudit-gaos-sdk-devpost-judge-readiness.json  codex%2Faudit-sdk-showcase-page-coverage.json  codex%2Fbrand-gaos-as-gaming-agi-open-sdk.json  codex%2Fcommit-pull-merge-push-sdk.json  codex%2Fcondense-gaos-devpost-narrative.json  (+39 more)
docs/: agentic-play.md  architecture.md  building-with-gpt-5-6-sol.md  capabilities.md  engine.md  high-frequency.md  index.md  mission.md  protocol-v1.md  python.md  quickstart.md  releases.md  settlement.md  support.md  version-history.md
examples/: agentic-play.ts
python/: README.md  pyproject.toml
python/agilabs_arena/: __init__.py  agent.py  client.py  env.py
python/examples/: random_agent.py
python/tests/: test_agent.py  test_env_live.py  test_protocol_unit.py
scripts/: check-release-version.mjs
src/: gaos-agent.ts  index.ts  protocol.ts
test/: agent-cli.test.ts  agent-drivers.test.ts  agent-environment.test.ts  arrival-claims.test.ts  behavior-tree.test.ts  chain-reaction.test.ts  client.live.test.ts  client.unit.test.ts  engine.test.ts  gates.test.ts  geometry.test.ts  information.test.ts  multi-agent.test.ts  next-version.test.ts  portals.test.ts  projectiles.test.ts  protocol.test.ts  push-chain.test.ts  rays.test.ts  replay-format.test.ts  requirements-coverage.test.ts  resources.test.ts  settlement.test.ts  solver-replay.test.ts  transport.test.ts  triggers.test.ts  zones-card.test.ts
(+93 files in other folders)
