[project]
name = "gaos-turn-based-grid-sdk"
version = "0.16.0"
description = "Python client and Gymnasium-style environment for the GAOS tabletop mechanism suite"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
# Deliberately zero runtime dependencies — stdlib urllib only, so the env
# drops into any harness (Gymnasium, verifiers, bare scripts) without
# dependency conflicts.
dependencies = []

[project.urls]
Homepage = "https://yugao-gaos.github.io/GAOS-TurnBasedGrid-SDK/"
Documentation = "https://yugao-gaos.github.io/GAOS-TurnBasedGrid-SDK/python"
Repository = "https://github.com/yugao-gaos/GAOS-TurnBasedGrid-SDK"
Issues = "https://github.com/yugao-gaos/GAOS-TurnBasedGrid-SDK/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agilabs_arena*"]
